docs/0.3.5-alpha/getting_started/usage.md
The Amber CLI can be used as a runtime or as a compiler.

## Command Line Interface

*This output is generated from the 0.3.5-alpha version.*
```
Usage: amber [OPTIONS] [INPUT] [OUTPUT]

Arguments:
  [INPUT]   '-' to read from stdin
  [OUTPUT]  '-' to output to stdout, '--silent' to discard

Options:
  -e, --eval <EVAL>     Code to evaluate
      --docs            Generate docs (OUTPUT is dir instead, default: `docs/`)
      --disable-format  Don't format the output file
      --minify          Minify the resulting code
  -h, --help            Print help
  -V, --version         Print version
```

### Running Amber Code

The following command will simply execute `hello.ab` as a script file. Amber code will be compiled to Bash and then executed all in one go:

```sh
$ amber hello.ab
Hello world!
```

If you want to run just a small expression, you can do that as well. Simply pass the `-e` (execute) flag to the command:

```sh
$ amber -e 'echo upper("Hello world!")'
HELLO WORLD!
```

Notice that when executing a single expression, Amber automatically includes its standard library for you. This can be really handy when you're in the flow, and all you want is to use a function from Amber's standard library in the terminal.

### Compiling Amber Scripts

There are times when you prefer to just compile Amber code to a script, for example when dealing with _cron jobs_:

```sh
$ amber input.ab output.sh
```

You’ll notice that the compiled script is immediately callable; hence, there’s no need to add executable permissions using `chmod`, for instance. Amber grants the permission automatically.

Furthermore, Amber adds a _shebang_ at the top of the compiled script. This enables you to run the code simply, without any additional commands:

```sh
$ ./output.sh
```

#### Disable Formatting

Using the `--disable-format` option prevents the execution of external formatting tools after the Bash compilation process:

```sh
$ amber --disable-format input.ab output.sh
```

#### Minification

Additionally, the `--minify` option compresses the generated Bash code to reduce its size:

```sh
$ amber --minify input.ab output.sh
```

### Generating Amber Documentation

The `--docs` option extracts comments prefixed with `///` (triple slashes) from a single Amber file, and generates a Markdown file for documentation, by default in the `docs` subdirectory:

```sh
$ amber --docs stdlib.ab
```

## Syntax Highlighting

### Visual Studio Code

You can find it in Visual Studio Code extension store under the name **Amber Language**.

Or you can download it here in [the Visual Studio Marketplace website](https://marketplace.visualstudio.com/items?itemName=Ph0enixKM.amber-language).

### Zed

You can download it from https://github.com/amber-lang/zed-amber-extension.

### Vim

The official Amber Vim plugin supports syntax highlighting, and sets some Vim options for easier editing.

You can clone it into your Vim plugin directory from https://github.com/amber-lang/amber-vim.
